@@ -24,6 +24,8 @@ gcc-9 (9-20181218-1) UNRELEASED; urgency=medium
   * Stop building the fixincludes package, never used by lintian.
   * Remove the libstdc++6 breaks for the stretch release.
   * libgccjit-doc: Install image files.
+  * Don't provide <frontend>-compiler names for cross compiler packages.
+    Addresses: #916376.  Not a final solution.
 
   [ Nicolas Boulenguez ]
   * Update Ada patches.
